<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_details_title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/event_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title"
        android:inputType="text"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/event_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_date"
        android:inputType="date"
        android:textSize="15sp"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/event_title_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/event_description_input"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/event_description"
        android:inputType="text"
        android:textSize="15sp"
        android:gravity="top"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/event_date_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/save_event_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/update_button"
        app:layout_constraintTop_toBottomOf="@id/event_description_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/delete_event_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        app:layout_constraintTop_toBottomOf="@id/save_event_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
